Added home page url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- 
+  "homepage": "https://ravirajsingh1.github.io/Ecommerce-FSShop",
   "name": "FSShop",
   "version": "0.1.0",
   "private": true,
